# The-Sovereign-Network

./: .gitignore  .gitmodules  AGENTS.md  AGENT_TASKS.md  ALPHA_RELEASE_NOTES.md  API_INTEGRATION_SUMMARY.md  API_TESTING_CHECKLIST.md  ARCHITECTURAL_INTENTIONS.md  BEST_TEST_FILES.md  BLOCKCHAIN_ARCHITECTURE.md  BLOCKCHAIN_FEATURE_MATRIX.md  BLOCKCHAIN_REMEDIATION_PLAN.md  BONDING_CURVE_MIGRATION_PLAN.md  BONDING_CURVE_TECHNICAL_SPEC.md  BUILDING.md  BUILD_TODAY.md  CHANGES_SUMMARY.md  CLI_USER_GUIDE.md  CODE_REVIEW_1842_PIECEWISE_LINEAR.md  CODE_REVIEW_PR_386.md  CODE_REVIEW_PR_387.md  CODE_REVIEW_SUMMARY.md  COGNITIVE_COMPLEXITY_REFACTORING.md  COMPRESSION_NEURAL_MESH_GAMEPLAN.md  COMPRESSION_OPTIMIZATION_REPORT.md  COMPRESSION_README.md  CONSENSUS_PROTOCOL.md  CONTRIBUTOR_KNOWLEDGE_ASSESSMENT.md  CORE_READINESS_ASSESSMENT.md  Cargo.toml  DAPP_OPPORTUNITIES.md  DECENTRALIZATION_AUDIT.md  DECENTRALIZED_EMAIL_DESIGN.md  DEPLOYMENT_SUMMARY.md  DEV_VS_PROD_REALITY.md  DRYRUN_VALIDATION_REPORT.md  DUAL_NODE_SETUP.md  DUAL_NODE_SUCCESS.md  EASY_API_ADDITIONS.md  EMAIL_NAMING_OPTIONS.md  (+97 more)
crates/lib-identity/: Cargo.toml  IDENTITY_SERVICE_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md
explorer/: Cargo.toml  README.md  Trunk.toml  index.html
explorer/src/: main.rs
lib-access-control/: Cargo.toml
lib-access-control/src/: decision.rs  lib.rs  policy.rs  principal.rs  types.rs
lib-client/: Cargo.toml  IMPLEMENTATION_PLAN.md  build.rs
lib-client/.cargo/: config.toml
lib-client/react-native/: INTEGRATION.md
lib-client/src/: bip39_wordlist.rs  bonding_curve_tx.rs  cbe_tx.rs  crypto.rs  dao_tx.rs  error.rs  handshake.rs  identity.rs  lib.rs  nft_tx.rs  request.rs  session.rs  token_tx.rs  wasm.rs
lib-client/uniffi/: zhtp_client.udl
lib-compression/: Cargo.toml  README.md  ZKC-COMPRESSION.md
lib-compression/examples/: compress_file.rs  compress_interactive.rs  test_real_files.rs
lib-compression/frontend/: index.html
lib-compression/src/: assembler.rs  chunker.rs  error.rs  lib.rs  pattern_dict.rs  patterns.rs  shard.rs  sovereign_codec.rs  transport.rs  witness.rs  zkc_compressor.rs  zkc_decompressor.rs
lib-governance/: Cargo.toml
lib-governance/src/: council.rs  errors.rs  fields.rs  lib.rs  pending.rs  tx.rs
lib-identity-core/: Cargo.toml
lib-identity-core/src/: lib.rs
lib-mempool/: Cargo.toml
lib-mempool/src/: admission.rs  config.rs  errors.rs  lib.rs  state.rs
lib-neural-mesh/: Cargo.toml  README.md
lib-neural-mesh/src/: anomaly.rs  codec_learner.rs  compressor.rs  content.rs  distributed.rs  lib.rs  prefetch.rs  router.rs
lib-storage/: Cargo.toml
lib-storage/src/: lib.rs  network_integration.rs  wallet_content_integration.rs
lib-storage/tests/: backend_integration_tests.rs  dht_nodeid_stability.rs  storage_load_tests.rs
lib-tokens/: Cargo.toml
lib-tokens/src/: contract.rs  errors.rs  lib.rs  transfer.rs
lib-utxo/: Cargo.toml
lib-utxo/src/: apply.rs  errors.rs  lib.rs  types.rs
tests/integration/: Cargo.toml  test_full_stack_e2e.rs  test_neural_mesh_network.rs  test_orchestrator_restart_determinism.rs
tools/: Cargo.toml  cbe_scan.rs  chain_audit.rs  domain_snapshot.rs  gateway_load_test.rs  generate_test_data.rs  identity_e2e_sim.rs  regen_cbe_key.rs  register_gateway.rs  replay_wallets.rs  reset-testnet-drop-g4.py  sled_migration.rs  testnet_reset.rs  testnet_snapshot.rs
tools/dao-register/: Cargo.toml
tools/node-keygen/: Cargo.toml
tools/sled-identity-export/: Cargo.toml
tools/sled-recovery/: Cargo.toml
tools/sled-wallet-lookup/: Cargo.toml
tools/zhtp-dilithium-signer/: Cargo.toml
zhtp/: Cargo.toml  README.md  build.rs  build_log.txt
zhtp-cli/: Cargo.toml  REFACTORING_GUIDE.md  build.rs
zhtp-cli/docs/: environment-variables.md
zhtp-cli/scripts/: run_web4_functional_tests.sh
zhtp-cli/src/: argument_parsing.rs  banner.rs  cli_config.rs  error.rs  execution.rs  handler.rs  interactive.rs  interactive_shell.rs  lib.rs  main.rs  output.rs
zhtp-cli/tests/: IMPLEMENTATION_SUMMARY.md  TEST_FILES_INDEX.md  WEB4_FUNCTIONAL_TESTING.md  feature_tests.rs  handler_tests.rs  integration_tests.rs  web4_functional.rs  web4_functional_bug_report_template.md
zhtp-client-core/: Cargo.toml
zhtp-client-core/src/: lib.rs
zhtp-client-ffi/: Cargo.toml
zhtp-client-ffi/src/: lib.rs
zhtp-daemon/: Cargo.toml  README.md  config.example.toml
zhtp-daemon/src/: api.rs  backend_pool.rs  config.rs  discovery.rs  forward_context.rs  identity.rs  lib.rs  main.rs  metrics.rs  quic_server.rs  service.rs
zhtp/configs/: MAC_NODE_QUICKSTART.md  README.md  dev-node.toml  dev-validator.toml  edge-node.toml  full-node.toml  mac-bootstrap.toml  mainnet-bootstrap-node.toml  mainnet-edge-node.toml  mainnet-full-node.toml  mainnet-storage-node.toml  mainnet-validator-node.toml  relay-node.toml  ren-ai-node.toml  storage-node.toml  test-node1.toml  test-node2.toml  test-node3.toml  test-node4.toml  testnet-bootstrap-node.toml  testnet-edge-node.toml  testnet-full-node.toml  testnet-storage-node.toml  testnet-validator-node.toml  validate-config.sh  validator-node.toml
zhtp/docs/: README.md  api-reference.md  api.md  architecture.md  cli-reference.md  cli.md  configuration-guide.md  module-analysis.md
zhtp/examples/: device_privacy_integration_demo.rs  test_dht_api.rs
zhtp/proto/: pouw.proto
zhtp/scripts/: build_android.sh  build_ios.sh
zhtp/src/: discovery_coordinator.rs  keyfile_names.rs  keystore_names.rs  lib.rs  main.rs  network_output_dispatcher.rs  session_manager.rs  storage_network_integration.rs  unified_server.rs  unified_server.rs.tcp_udp_backup  web4_manifest.rs  web4_stub.rs
zhtp/tests/: VALIDATOR_READINESS_GATES.md  common_network_test.rs  config_test_utils.rs  config_tests.rs  config_tests_fixed.rs  dht_persistence_test.rs  integration_module_tests.rs  integration_tests.rs  mesh_formation_test.rs  mesh_router_peer_registration_test.rs  monitoring_tests.rs  monitoring_tests_fixed.rs  multi_node_network_test.rs  node_type_detection.rs  pouw_web4_integration_tests.rs  quic_api_endpoints_test.rs  (+6 more)
(+2226 files in other folders)
