[workspace]
resolver = "2"

members = [
    "crates/lib-blockchain",
    "crates/lib-consensus",
    "crates/lib-crypto",
    "crates/lib-dht",
    "crates/lib-dns",
    "crates/lib-economy",
    "crates/lib-identity",
    "crates/lib-network",
    "crates/lib-proofs",
    "crates/lib-protocols",
    "crates/lib-storage",
    "crates/zhtp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sovereign Network Team"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
