[workspace]
resolver = "2"

members = [
    "lib-types",
    "lib-fees",
    "lib-tokens",
    "lib-governance",
    "lib-utxo",
    "lib-mempool",
    "lib-blockchain",
    "lib-client",
    "lib-consensus",
    "lib-crypto",
    "lib-dht",
    "lib-dns",
    "lib-economy",
    "lib-identity-core",
    "lib-identity",
    "lib-network",
    "lib-proofs",
    "lib-protocols",
    "lib-storage",
    "zhtp",
    "zhtp-cli",
    "tests/lib-identity/test-lib-identity-imports",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sovereign Network Team"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
