[workspace]
resolver = "2"

members = [
    "lib-types",
    "lib-fees",
    "lib-tokens",
    "lib-governance",
    "lib-utxo",
    "lib-mempool",
    "lib-blockchain",
    "lib-client",
    "lib-consensus",
    "lib-crypto",
    "lib-dht",
    "lib-dns",
    "lib-economy",
    "lib-identity-core",
    "lib-identity",
    "lib-network",
    "lib-proofs",
    "lib-protocols",
    "tools",
    "tools/zhtp-dilithium-signer",
    "lib-storage",
    "zhtp",
    "zhtp-cli",
    "explorer",
    "tests/lib-identity/test-lib-identity-imports",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sovereign Network Team"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[profile.rpi]
# Raspberry Pi optimized: lower memory usage during compilation
inherits = "release"
opt-level = 2           # Lower optimization = less memory
lto = false             # Disable LTO = much faster, less memory
codegen-units = 256     # More codegen units = more parallelism, less memory per unit
debug = false
strip = true            # Strip symbols to reduce binary size

[profile.edge]
# Edge node: ultra-lightweight for mesh routing
inherits = "release"
opt-level = "s"         # Optimize for SIZE not speed
lto = false             # No LTO
codegen-units = 256
debug = false
strip = true
panic = "abort"         # No unwinding = smaller binary
overflow-checks = false # Disable overflow checks for smaller code

[profile.dev-fast]
# Fast development iteration
inherits = "dev"
opt-level = 1           # Minimal optimization
incremental = true
debug = true
