[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.5", features = ["http"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "s"
