[package]
name = "lib-governance"
version = "0.1.0"
edition = "2021"
description = "ZHTP Governance - Deterministic configuration updates"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
blake3 = "1.5"
bincode = "1.3"

# Internal dependencies
lib-types = { path = "../lib-types" }

[dev-dependencies]
serde_json = "1.0"
