[package]
name = "lib-storage"
version = "0.1.0"
edition = "2021"
description = "ZHTP Unified Storage System - DHT + Economic Storage Layer"
license = "MIT"

[lib]
name = "lib_storage"
path = "src/lib.rs"

[dependencies]
# ZHTP Package Dependencies
lib-types = { path = "../lib-types" }
lib-crypto = { path = "../lib-crypto" }
lib-proofs = { path = "../lib-proofs" }
lib-identity = { path = "../lib-identity" }

# Production Dependencies for Storage System
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1" # Ticket #152/#154: For DhtTransport and DhtMessageRouter traits
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
bincode = "1.3"
reed-solomon-erasure = "6.0"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
lz4_flex = "0.11"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
humantime-serde = "1.1"
parking_lot = "0.12" # DB-010: Thread-safe locking for backend implementations
sled = "0.34" # DB-010: Persistent storage backend

# Persistent key-value storage backend (DB-008)
sled = "0.34"

# [DB-009] SQLite backend for structured data
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
testing = []
# [DB-009] Enable SQLite backend for structured queryable data
sqlite = ["sqlx"]
