[package]
name = "lib-utxo"
version = "0.1.0"
edition = "2021"
description = "ZHTP UTXO Execution - Native transfer application"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# Internal dependencies
lib-types = { path = "../lib-types" }

[dev-dependencies]
serde_json = "1.0"
