[package]
name = "zhtp-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Sovereign Network Team"]
license = "MIT"
description = "Local browser companion daemon for QUIC-native ZHTP/Web4 access"

[[bin]]
name = "zhtp-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json", "tokio"] }
base64 = "0.22"
dirs = "5.0"
hex = "0.4"
lib-crypto = { path = "../lib-crypto" }
lib-identity = { path = "../lib-identity" }
lib-network = { path = "../lib-network" }
lib-protocols = { path = "../lib-protocols" }
lib-types = { path = "../lib-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
