[package]
name = "zhtp"
version = "0.1.0"
edition = "2021"
authors = ["ZHTP Development Team"]
description = "ZHTP Network Node - Complete Internet Replacement and Web4 Orchestrator"
license = "MIT"
repository = "https://github.com/zhtp/zhtp"

# Main library (for orchestrator binary and tests)
[lib]
name = "zhtp"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]  # rlib for Rust, cdylib for Android, staticlib for iOS

# Binary executable
[[bin]]
name = "zhtp"
path = "src/main.rs"

[dependencies]
# All ZHTP package dependencies - must be completed first
lib-crypto = { path = "../lib-crypto" }
lib-identity-core = { path = "../lib-identity-core" }
lib-proofs = { path = "../lib-proofs" }
lib-identity = { path = "../lib-identity" }
lib-storage = { path = "../lib-storage" }
lib-network = { path = "../lib-network" }
lib-types = { path = "../lib-types" }
lib-blockchain = { path = "../lib-blockchain", features = ["contracts"], optional = true }
lib-consensus = { path = "../lib-consensus" }
lib-economy = { path = "../lib-economy" }
lib-protocols = { path = "../lib-protocols" }
# Note: lib-api and lib-contracts will be added when available

# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
quinn = "0.11"  # QUIC protocol implementation

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
toml = "0.8"
config = "0.14"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
hex = "0.4"
lru = "0.12"
base64 = "0.22"
md5 = "0.7"
bincode = "1.3"
ciborium = "0.2"  # CBOR serialization for mobile/web clients
blake3 = "1.5"
sha2 = "0.10"  # SHA256 for BIP39 checksum validation
crystals-dilithium = "1.0"  # Pure Rust Dilithium for deterministic key generation from seed
rpassword = "7.3"  # Secure password input
dirs = "5.0"  # Home directory detection for keystore
atty = "0.2"  # TTY detection for interactive TOFU prompts
lz4_flex = "0.11"  # LZ4 compression for DHT content decompression
once_cell = "1.19"  # Global singleton for bootstrap peers
zeroize = "1.7"  # Secure memory zeroization for passwords
rand = "0.8"  # Cryptographically secure random number generation
keyring = "3.6"  # System keyring for secure seed storage
argon2 = "0.5"  # Password hashing for seed encryption

# System integration
sysinfo = "0.31"
chrono = { version = "0.4", features = ["serde"] }

# Async coordination
futures = "0.3"
async-trait = "0.1"

# Web dashboard and HTTP server
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["json", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "timeout"] }

# TLS support for HTTPS gateway
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
tokio-rustls = "0.26"
rcgen = "0.13"  # Self-signed certificate generation

# Additional utilities for integration
parking_lot = "0.12"
urlencoding = "2.1"
local-ip-address = "0.6"
socket2 = "0.5"  # Socket options for multicast discovery

# Windows-specific dependencies (for Bluetooth and WiFi Direct protocols)
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51"
features = [
    "Win32_Devices_Bluetooth", 
    "Win32_Foundation",
    "Foundation",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_WiFiDirect",
    "Networking_Proximity"
]

# Mobile dependencies removed - see archive/mobile-ffi-stubs branch when needed

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"
zhtp_client = { package = "lib-client", path = "../lib-client" }

[features]
default = ["production", "full-blockchain", "windows-bluetooth"]  # See Issue #739 for planned TLS pinning behavior
production = []
# unsafe-bootstrap removed - TLS certificate pinning is now required (Issue #739)
development = ["tracing-subscriber/env-filter"]
pure-mesh = []  # Pure mesh mode without TCP/IP fallback
hybrid = []     # Hybrid mesh + TCP/IP mode
yaml = ["dep:serde_yaml"]  # Optional YAML output support

# Blockchain features
full-blockchain = ["lib-blockchain", "lib-blockchain/wasm-runtime"]  # Full blockchain with WASM contracts
basic-blockchain = ["lib-blockchain"]  # Basic blockchain without WASM (saves ~500MB RAM during compile)
minimal-blockchain = []  # No blockchain validation, DHT storage only

# Platform-specific Bluetooth features (automatically enabled on respective platforms)
# Note: Windows WinRT APIs are now always available on Windows without feature flags
platform-bluetooth = ["windows-bluetooth", "lib-network/windows-gatt"]  # Auto-enable Bluetooth for current platform
windows-bluetooth = ["lib-network/windows-gatt"]  # Windows GATT Server with WinRT APIs
linux-bluetooth = ["lib-network/enhanced-parsing"]  # Linux uses BlueZ via D-Bus
macos-bluetooth = ["lib-network/macos-corebluetooth"]

# Node type profiles
validator = ["full-blockchain", "lib-proofs/production"]  # Full validator node
relay = ["basic-blockchain", "lib-proofs/std"]  # Relay node (verify only, no proving)
edge = ["minimal-blockchain"]  # Edge node (routing only)

# Mobile profiles removed - see archive/mobile-ffi-stubs branch when needed

# Raspberry Pi optimized profile - minimal features for low-memory compilation
rpi = ["basic-blockchain", "relay"]  # Raspberry Pi optimized build (no WASM runtime)

# Build profiles live at the workspace root `Cargo.toml`.
