[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
lib-crypto = { path = "../../lib-crypto" }
lib-identity = { path = "../../lib-identity" }
lib-network = { path = "../../lib-network" }
rand = "0.8"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "test_orchestrator_restart_determinism"
path = "test_orchestrator_restart_determinism.rs"
