[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
lib-crypto = { path = "../../lib-crypto" }
lib-identity = { path = "../../lib-identity" }
lib-network = { path = "../../lib-network" }
lib-neural-mesh = { path = "../../lib-neural-mesh" }
lib-compression = { path = "../../lib-compression" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8"

[[test]]
name = "test_orchestrator_restart_determinism"
path = "test_orchestrator_restart_determinism.rs"

[[test]]
name = "test_neural_mesh_network"
path = "test_neural_mesh_network.rs"
