[package]
name = "dao-register"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dao-register"
path = "src/main.rs"

[dependencies]
zhtp_client    = { package = "lib-client",   path = "../../lib-client"  }
lib-network    = { path = "../../lib-network" }
lib-identity   = { path = "../../lib-identity" }
lib-crypto     = { path = "../../lib-crypto"   }
zhtp           = { path = "../../zhtp"          }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
anyhow         = "1"
base64         = "0.22"
hex            = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

